<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cly_item_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:paddingTop="6dp"
        android:paddingStart="6dp"
        android:paddingBottom="6dp">

        <TextView
            android:id="@+id/txt_counter_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_counter_title"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/app_tint" />

        <TextView
            android:id="@+id/txt_counter_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_plus"
            app:layout_constraintStart_toEndOf="@+id/img_minus"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/app_tint" />

        <ImageView
            android:id="@+id/img_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_check_circle"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_counter_title"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/app_tint" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>