<resources>
    <string name="app_name">Counters</string>

    <!-- Preferences Strings -->
    <string name="sp_example">sp_example</string>

    <!-- Welcome Screen Strings -->
    <string name="t_welcome_tile">Counters</string>
    <string name="t_welcome_subtitle">Capture cups of lattes, frapuccinos, or anything else that can be counted.</string>

    <!-- Create Item Strings -->
    <string name="t_create_counter">Create counter</string>
    <string name="t_see_examples">Give it a name. Creative block? See <u>examples</u>.</string>
    <string name="t_no_counters">No counters yet</string>
    <string name="t_no_counters_phrase">“When I started counting my blessings, my whole life turned around.” — Willie Nelson</string>
    <string name="t_empty_search">No results</string>

    <!-- Examples Strings -->
    <string name="t_examples">Examples</string>
    <string name="t_select_example">Select an example to add it to your counters.</string>
    <string name="t_drinks">Drinks</string>
    <string name="t_food">Food</string>
    <string name="t_misc">Misc</string>

    <!-- Button Strings -->
    <string name="t_btn_start">GET STARTED</string>
    <string name="t_btn_add_counter">ADD COUNTER</string>
    <string name="t_btn_save">SAVE</string>
    <string name="t_btn_ok">OK</string>
    <string name="t_btn_dismiss">DISMISS</string>
    <string name="t_btn_retry">RETRY</string>
    <string name="t_btn_delete">DELETE</string>
    <string name="t_btn_cancel">CANCEL</string>

    <!-- Hint Strings -->
    <string name="h_search">Search Counters</string>
    <string name="h_name">Name</string>
    <string name="h_cups">Cups of coffee</string>

    <!-- Warning Title Strings -->
    <string name="wt_empty_name">Blank Name</string>
    <string name="wt_cant_create_counter">Couldn\'t create the counter</string>
    <string name="wt_internet_problem">Internet connection</string>
    <string name="wt_counter_created">Counter created</string>
    <string name="wt_cant_update">Couldn\'t update the \"%s\" counter to %s</string>
    <string name="wt_cant_delete">Couldn\'t delete the \"%s\" counter</string>
    <string name="wt_cant_download">Couldn\'t download the counters</string>

    <!-- Warning Subtitle Strings -->
    <string name="ws_empty_name">Please fill the name of the counter with a value</string>
    <string name="ws_offline_device">The internet connection appears to be offline</string>

    <!-- Newtork Error Strings -->
    <string name="e_connection_failed">Connection to server failed.</string>
    <string name="e_connection_failed_status">Connection to server failed. Status: </string>
</resources>