<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".modules.fr_create_item.CreateItemFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_close"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_close"
                    app:tint="@color/app_tint" />

                <TextView
                    style="@style/TextView_TitleItem2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="6"
                    android:gravity="center_vertical"
                    android:text="@string/t_create_counter" />

                <TextView
                    android:id="@+id/txt_save_item"
                    style="@style/TextView_SubtitleItem2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/t_btn_save" />

                <ProgressBar
                    android:id="@+id/pgb_create_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:indeterminate="true"
                    android:visibility="gone" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tly_name_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/h_name"
            app:expandedHintEnabled="true"
            app:hintTextColor="@color/app_tint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_create_item">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name_item"
                style="@style/EditText_CreateItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/h_cups">

                <requestFocus />
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_see_examples"
            style="@style/TextView_SubtitleItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/t_see_examples"
            app:layout_constraintStart_toStartOf="@+id/tly_name_item"
            app:layout_constraintTop_toBottomOf="@+id/tly_name_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>