...
                    android:layout_weight="1"
                    android:src="@drawable/ic_close"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_share_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="horizontal"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="6"/>

                <ImageView
                    android:id="@+id/img_delete"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_delete"/>

                <ImageView
...
